# root-proj

./: .gitignore  .replit  QUICKSTART.md  TEST_RESULTS.md  pyproject.toml  replit.md  test-e2e.ps1  test-simple.ps1
attached_assets/: Pasted-You-are-tasked-with-developing-a-SaaS-web-application-to-automate-the-extraction-storage-and-intel-1763832523593_1763832523594.txt
backend/: add_sample_data.py  check_db_state.py  database.py  main.py  models.py  requirements.txt  reset_db.py  schemas.py  scraper.py  seed_data.py
backend/routers/: admin.py  auth.py  cases.py  scraper.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/proxy/[...slug]/: route.ts
frontend/app/cases/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: Navbar.tsx
